desktop icons, fixed dragging bug, proper z-index behaviour

--- a/controller_styles.scss
+++ b/controller_styles.scss
@@ -8,6 +8,10 @@ $default_font: "Helvetica Neue", "Helvetica", Arial;
 
 body {
 	font-family: $default_font;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	background-color: #f0f0ff;
 }
 
 .framed {
@@ -67,21 +71,21 @@ body {
 }
 
 .faq {
-  width: 400px;
-  position: absolute;
+	width: 400px;
+	position: absolute;
 }
 
 /* Style the buttons that are used to open and close the accordion panel */
 .accordion {
-  background-color: #eee;
-  color: #444;
-  cursor: pointer;
-  padding: 18px;
-  width: 100%;
-  text-align: left;
-  border: none;
-  outline: none;
-  transition: 0.4s;
+	background-color: #eee;
+	color: #444;
+	cursor: pointer;
+	padding: 18px;
+	width: 100%;
+	text-align: left;
+	border: none;
+	outline: none;
+	transition: 0.4s;
 }
 
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
@@ -91,8 +95,39 @@ body {
 
 /* Style the accordion panel. Note: hidden by default */
 .panel {
-  padding: 18px;
-  background-color: white;
-  display: none;
-  overflow: hidden;
+	padding: 18px;
+	background-color: white;
+	display: none;
+	overflow: hidden;
+}
+
+.windows {
+	position: absolute;
+	height: 100%;
+	width: 100%;
+}
+
+/* Desktop icons */
+.d-icon {
+	float: right;
+	height: 86px;
+	width: 86px;
+	text-align: center;
+	margin-right: 30px;
+	cursor: pointer;
+	font-style: italic;
+	font-weight: 500;
+	font-size: 10pt;
+}
+
+.d-icon img {
+	height: 64px;
+	width: 64px;
+	margin-bottom: 10px;
+}
+
+.d-label {
+	display: inline-block;
+	background-color: white;
+	width: 50px;
 }
